prepare with push

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,8 +4,8 @@
   <a
     routerLinkActive="text-blue-500 underline"
     class="hover:underline"
-    [routerLink]="'/about'"
-    >About</a
+    routerLink="/pokemons"
+    >Pokemons</a
   >
   <a
     routerLinkActive="text-blue-500 underline"
