--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <a
     routerLinkActive="text-blue-500 underline"
     class="hover:underline"
-    routerLink="/pokemons"
+    routerLink="/pokemons/page/1"
     >Pokemons</a
   >
   <a
